# chat-modrpc-example

./: .gitignore  README.md  chat.modrpc  generate.sh
chat-modrpc/rust/: Cargo.toml
chat-modrpc/rust/src/: interface.rs  proto.rs
chat-modrpc/rust/src/roles/: chat_client.rs  chat_server.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
term-ui/: Cargo.toml
term-ui/src/: main.rs
ui/: .gitignore  Cargo.toml  Dioxus.toml
ui/assets/: main.css
ui/src/: main.rs
