[package]
name = "modrpc-chat-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
localq = "0.0"
mproto = "0.2"
modrpc = { version = "0.0", features = ["tcp-transport"] }
modrpc-executor = { version = "0.0", features = ["tokio"] }
ratatui = "0.29"
std-modrpc = "0.0"
tokio = { version = "1", features = ["full"] }

chat-modrpc = { path = "../chat-modrpc/rust" }
